<resources>
    <string name="app_name">PCBuilderApp</string>
    <string name="main_title">Galvenā Izvēlne</string>
    <string name="fun_select_components">Izvēlēties Komponentus</string>
    <string name="fun_view_configuration">Konfigurācijas Pārskats</string>
    <string name="fun_view_assembly_instruction">Komponentu Montāžas Instrukcija</string>
    <string name="compatibility">Savietojamība</string>
    <string name="power">Jauda</string>
    <string name="total_price">Kopējā summa</string>
    <string name="analyze_configuration">Analizēt Konfigurāciju</string>
    <string name="cpu_gpu_balance">CPU un GPU līdzsvars</string>
    <string name="cpu_score">CPU vērtējums</string>
    <string name="gpu_score">GPU vērtējums</string>
    <string name="performance_limitation">Veiktspējas ierobežojums</string>
    <string name="balance">Līdzsvars</string>
    <string name="upgrade_recommendations">Jaunināšanas ieteikumi</string>
    <string name="show_upgrade_recommendations">Rādīt jaunināšanas ieteikumus</string>
    <string name="specifications">Specifikācijas</string>
    <string name="prices">Cenas</string>
    <string name="price_currency">Cena (€)</string>
    <string name="price_min">No</string>
    <string name="price_max">Līdz</string>
    <string name="apply">Pielietot</string>
    <string name="previous_step">Iepriekšējais solis</string>
    <string name="next_step">Nākamais solis</string>
    <string name="balance_status_1">Lielisks līdzsvars</string>
    <string name="balance_description_1">Starp CPU un GPU ir labs līdzsvars.</string>
    <string name="balance_status_2">Neliela nelīdzsvarotība</string>
    <string name="balance_description_2">Neliela komponentu veiktspējas atšķirība.</string>
    <string name="balance_status_3">Vidēja nelīdzsvarotība</string>
    <string name="balance_description_3">Iespējams veiktspējas samazinājums. Ieteicams uzlabot vājāko komponentu.</string>
    <string name="balance_status_4">Būtiska nelīdzsvarotība</string>
    <string name="balance_description_4">Spēcīgākā komponenta potenciāls netiek izmantots pilnībā. Ieteicams veikt uzlabojumus.</string>
    <string name="cpu">CPU</string>
    <string name="cpu_cooler">CPU dzesētājs</string>
    <string name="gpu">GPU</string>
    <string name="motherboard">Mātesplate</string>
    <string name="ram">RAM</string>
    <string name="storage">SSD/HDD</string>
    <string name="psu">PSU</string>
    <string name="pc_case">Korpuss</string>
    <string name="case_cooler">Korpusa dzesētājs</string>
    <string name="save_text">Konfigurācija ir saglabāta</string>
    <string name="no">Nē</string>
    <string name="error_cpu_motherboard">CPU ligzda %1$s nav savietojama ar mātesplates ligzdu %2$s.</string>
    <string name="error_ram_motherboard_1">RAM tips %1$s nav savietojams ar mātesplates atbalstīto atmiņas tipu %2$s.</string>
    <string name="error_ram_motherboard_2">Mātesplatē nav pietiekami daudz RAM ligzdas skaits.</string>
    <string name="error_ram_motherboard_3">RAM kopējais apjoms %1$d GB pārsniedz mātesplates maksimāli atbalstīto apjomu %2$d GB.</string>
    <string name="error_cpu_cpuCooler">CPU ligzda %1$s nav savietojama ar dzesētāja ligzdu %2$s.</string>
    <string name="error_gpu_motherboard">Mātesplatē nav nodrošināts PCIe x16 savienojums.</string>
    <string name="error_storage_motherboard_1">Mātesplate neatbalsta SSD M.2.</string>
    <string name="error_storage_motherboard_2">Mātesplatē SATA savienojums nav pieejams.</string>
    <string name="error_storage_motherboard_3">Nepiedāvātais SSD/HDD formfaktors.</string>
    <string name="error_case_motherboard">Mātesplates formfaktors %1$s nav savietojamas ar datora korpusa formfaktoru.</string>
    <string name="error_psu">PSU jauda %1$d W nav pietiekama. Ieteicamā minimālā PSU jauda ir %2$d W (komponentu aprēķinātais patēriņš: %3$d W).</string>
    <string name="error_case_1">GPU garums %1$d mm neatbilst korpusa izmēriem, maksimālais GPU garums ir %2$d mm.</string>
    <string name="error_case_2">CPU dzesētāja augstums %1$d mm pārsniedz korpusam paredzētos maksimālos dzesētāja izmērus.</string>
    <string name="error_case_3">CPU dzesētāja radiators %1$d mm pārsniedz korpusam paredzētos maksimālos radiatoru izmērus %2$d.</string>
    <string name="error_case_4">PSU garums pārsniedz pieejamo garumu.</string>
    <string name="error_case_5">Korpusa dzesētāja izmērs neatbilst korpusa pieļaujamajiem izmēriem.</string>
    <string name="preparation">Darba virsma</string>
    <string name="preparation_step_1">(1) Sagatavojiet tīru un labi apgaismotu darba vietu, kurā nav statiskās elektrības, kā arī sagatavojiet skrūvgriežus un knaibles.</string>
    <string name="preparation_step_2">(2) Veicot turpmākos komponentu montāžas posmus, izņemiet attiecīgos komponentus no iepakojuma un noņemiet aizsargplēves, ja tādas ir.</string>
    <string name="cpu_installation">1. CPU uzstādīšana mātesplatē</string>
    <string name="cpu_installation_step_1">(1) Novietojiet mātesplati uz līdzenas virsmas (piemēram, uz mātesplates iepakojuma kastes).</string>
    <string name="cpu_installation_step_2">(2) Atrodiet CPU ligzdu un paceliet sānu sviru līdz galam uz augšu. Intel mātesplatēs kopā ar sviru pacelsies arī metāla aizsargvāciņš.</string>
    <string name="cpu_installation_step_3">(3) Paņemiet CPU aiz malām (nepieskaroties kontaktiem apakšā) un saskaņojiet CPU atzīmēto izvirzīto stūri ar ligzdas stūri.</string>
    <string name="cpu_installation_step_4">(4) Uzmanīgi ielieciet CPU ligzdā bez jebkāda spiediena vai piepūles.</string>
    <string name="cpu_installation_step_5">(5) Nolaidiet sviru atpakaļ uz leju. Intel CPU var atlēkt ligzdas aizsargājošais plastmasas vāciņš.</string>
    <string name="cpu_installation_step_6">(6) Pārliecinieties, ka CPU ir ievietots taisni.</string>
    <string name="ssdM2_installation">2. M.2 SSD uzstādīšana</string>
    <string name="ssdM2_installation_step_1">(1) Atrodiet M.2 ligzdu (parasti starp CPU un PCIe ligzdām).</string>
    <string name="ssdM2_installation_step_2">(2) Ja virsū ir uzstādīts radiators, atskrūvējiet to un noņemiet no tā aizsargplēvi.</string>
    <string name="ssdM2_installation_step_3">(3) Ievietojiet M.2 SSD ligzdā aptuveni 30 grādu leņķī un uzmanīgi piespiediet SSD otru galu uz leju.</string>
    <string name="ssdM2_installation_step_4">(4) Uzlieciet radiatoru atpakaļ, ja tāds ir un pieskrūvējiet to ar skrūvi. Ja radiatora nav, vienkārši pieskrūvējiet M.2 SSD ar skrūvi.</string>
    <string name="cpu_cooler_installation">3. CPU dzesētāja uzstādīšana</string>
    <string name="cpu_cooler_installation_step_1">(1) Uzstādiet dzesētāja stiprinājumu (atbilstoši dzesētāja instrukcijai un piejamajām detaļām)</string>
    <string name="cpu_cooler_installation_step_2">(2) Ja uz CPU dzesētāja nav uzklāta termopasta, uzklājiet nelielu daudzumu uz CPU un vienmērīgi izlīdziniet.</string>
    <string name="cpu_cooler_installation_step_3">(3) Noņemiet aizsargplēvi no CPU dzesētāja pamatnes, novietojiet dzesētāju uz CPU un pieskrūvējiet to pa diagonāli (krustveidā).</string>
    <string name="cpu_cooler_installation_step_4">(4) Pieslēdziet dzesētāja kabeli CPU_FAN ligzdam uz mātesplates.</string>
    <string name="ram_installation">4. RAM uzstādīšana</string>
    <string name="ram_installation_step_1">(1) Pārbaudiet operatīvās atmiņas ligzdu skaitu mātesplatē. Ja ir 2 ligzdas, RAM var ievietot vienā vai abās. Ja ir 4 ligzdas, moduļus parasti ievieto pāros (piemēram, 1. un 3. vai 2. un 4. ligzdā).</string>
    <string name="ram_installation_step_2">(2) Atveriet fiksatorus abos RAM ligzdas galos vai vienā pusē līdz tie pilnīgi atveras.</string>
    <string name="ram_installation_step_3">(3) Paņemiet RAM moduli aiz malām un savietojiet tā kontaktus ar izvirzījumu ligzdā.</string>
    <string name="ram_installation_step_4">(4) Uzmanīgi ievietojiet moduli ligzdā un nospiediet to uz leju līdz fiksatori ar klikšķi.</string>
    <string name="motherboard_installation">5. Mātesplates uzstādīšana korpusā</string>
    <string name="motherboard_installation_step_1">(1) Atveriet korpusu un pārbaudiet stiprinājuma stieņus (paplašinājuma skrūves). Ja tie nav uzstādīti, ieskrūvējiet tos atbilstoši mātesplates tipam (ATX, Micro-ATX, Mini-ATX) un korpusa instrukcijai.</string>
    <string name="motherboard_installation_step_2">(2) Atrodiet un uzstādiet taisnstūrveida aizbāzni (metāla plāksni) korpusa aizmugurē, pārliecinoties, ka tas piespiests ar klikšķi un aizbāžņa gludā virsma ir vērsta uz āru no korpusa.</string>
    <string name="motherboard_installation_step_3">(3) Ievietojiet mātesplati korpusā, saskaņojot portus ar aizbāžņu ligzdām un stiprinājuma stieņiem.</string>
    <string name="motherboard_installation_step_3_1">!!! Pārliecinieties, ka aizbāžņa izvirzījumi neiekļūst mātesplates portus.</string>
    <string name="motherboard_installation_step_4">(4) Nostipriniet mātesplati ar skrūvēm (ieskrūvējiet tās pa diagonāli), nepārsniedzot spēku.</string>
    <string name="motherboard_installation_step_5">(5) Atrodiet priekšējā paneļa kabeļus un pieslēdziet tos F_PANEL savienotājiem uz mātesplates (parasti apakšējā labajā daļā), vadoties pēc mātesplates shēmas.</string>
    <string name="motherboard_installation_step_6">(6) Pievērsiet uzmanību:</string>
    <string name="motherboard_installation_step_6_1">  - PWR_SW un RESET_SW polaritāte nav svarīga;</string>
    <string name="motherboard_installation_step_6_2">  - LED obligāti ievērojiet pareiza polaritāti (+/-);</string>
    <string name="motherboard_installation_step_6_3">  - Audio un USB kabeļus pieslēdziet pēc atslēgām un ligzdu formas.</string>
    <string name="ssd_hdd_installation">6. SSD/HDD uzstādīšana</string>
    <string name="ssd_hdd_installation_step_1">(1) Ievietojiet HDD vai SSD atbilstošajā korpusa vietā (3,5″ HDD - slotiņā korpusa apakšdaļā, 2,5″ SSD - speciālajā stiprinājumā aiz mātesplates).</string>
    <string name="ssd_hdd_installation_step_2">(2) Saskaņojiet disku ar stiprinājuma caurumiem un nostipriniet to ar skrūvēm vai citu fiksatoru.</string>
    <string name="ssd_hdd_installation_step_3">(3) Pieslēdziet SATA datu kabeli pie diska un otru galu pie mātesplates SATA datu ligzdas.</string>
    <string name="case_cooler_installation">7. Korpusa dzesētāju uzstādīšana</string>
    <string name="case_cooler_installation_step_1">(1) Ja datora korpuss nodrošina papildu dzesētāju uzstādīšanu, ievietojiet dzesētājus paredzētajās vietās (priekšpusē, aizmugurē vai augšpusē).</string>
    <string name="case_cooler_installation_step_2">(2) Pieskrūvējiet tos ar skrūvēm, ņemot vērā gaisa plūsmas virzienu. Pieslēdziet dzesētāja kabeli mātesplates ligzdā SYS_FAN</string>
    <string name="psu_installation">8. PSU uzstādīšana</string>
    <string name="psu_installation_step_1">(1) Ievietojiet PSU tam paredzētajā vietā korpusā (parasti aizmugurē apakšā vai augšpusē), novietojiet dzesētāju uz leju.</string>
    <string name="psu_installation_step_2">(2) Saskaņojiet skrūvju caurumes un nostipriniet PSU ar komplektā iekļautajām skrūvēm.</string>
    <string name="cables_connection">9. Kabeļu pieslēgšana</string>
    <string name="cables_connection_step_1">(1) Pieslēdziet 24-kontaktu ATX kabeli pie mātesplates galvenā barošanas ligzda (parasti atrodas labajā pusē pie operatīvās atmiņas). Pārliecinieties, ka fiksators ir pareizi nostiprināts.</string>
    <string name="cables_connection_step_2">(2) Pieslēdziet 4-kontaktu vai 8-kontaktu (4+4) CPU kabeli centrālā procesora barošanas ligzdai, kas atrodas blakus CPU ligzdai.</string>
    <string name="cables_connection_step_3">(3) Pieslēdziet SATA barošanas kabeļus HDD un SSD diskiem.</string>
    <string name="cables_connection_step_4">(4) Pārliecinieties, ka visi kabeļi ir pilnīgi ievietoti un sakārtojiet kabeļus, izmantojot stiprināšanas plastmasas siksnas.</string>
    <string name="gpu_installation">10. GPU uzstādīšana</string>
</resources>