<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context=".FilterComponentsActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="12dp"
        android:contentDescription="Back"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/back"
        app:tint="#F0ECEC" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/card"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:strokeColor="#7D7D7D">

        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/price_currency"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/text_primary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="18dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/minPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_min"
                android:textSize="16sp"
                android:textColor="@color/text_primary" />

            <EditText
                android:id="@+id/minPriceValue"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:inputType="numberDecimal"
                android:hint="0.00"
                android:textSize="16sp"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_secondary" />

            <TextView
                android:id="@+id/maxPriceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_max"
                android:textSize="16sp"
                android:textColor="@color/text_primary" />

            <EditText
                android:id="@+id/maxPriceValue"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:inputType="numberDecimal"
                android:hint="0.00"
                android:textSize="16sp"
                android:textColor="@color/text_primary"
                android:textColorHint="@color/text_secondary" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFilterComponentsActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyBtn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="14dp"
            android:padding="12dp"
            android:text="Pielietot"
            android:textColor="@color/text_primary"
            android:backgroundTint="@color/simple_button"
            app:cornerRadius="10dp" />
    </LinearLayout>

</LinearLayout>